--- a/app/views/lessees/show.html.erb
+++ b/app/views/lessees/show.html.erb
@@ -26,8 +26,7 @@
   </div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
-    <%= link_to_if @lessee.update?, 'Edit', edit_lessee_path(@lessee) %>
-    <span> | </span>
+    <span>Edit | </span>
     <%= link_to 'Back', lessees_path %>
   </div>
   <div class="col-md-12"><br/></div>
