--- a/app/views/components/_lessees.html.erb
+++ b/app/views/components/_lessees.html.erb
@@ -6,7 +6,7 @@
     <div class="col-md-3">Institution</div>
     <div class="col-md-2">Products</div>
   </div>
-  <div class="col-md-2"><%= link_to 'New Lessee', new_lessee_path %></div>
+  <div class="col-md-2">&nbsp;</div>
   <hr/>
 </b>
 <% lessees.each do |lessee| %>
