--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require common
  * require application_survey
+ *= require ebc_banner
  *= require_tree ./application
  *= require_tree ./common
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
