--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -1,5 +1,6 @@
 <% provide :page_title, @press.name %>
 <% provide :page_class, 'press' %>
+<%= render 'shared/ebc_banner' if show_ebc_banner? %>
 <div id="maincontent">
   <h2>Books</h2>
   <% if has_facet_values?  %>
