--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -266,21 +266,18 @@ round15 = %w[
   heb33915.0001.001
 ]
     %>
-  <% if @monograph_presenter.heb? %>
-    <% if @monograph_presenter.heb_id? && !round15.include?(@monograph_presenter.heb_id)  %>
-      <div class="message" role="alert">
-        <div class="wrapper">
-          <div class="text">ACLS Humanities E-Book has migrated to <a href="https://fulcrum.org" target="_blank">Fulcrum</a>, a new platform for enhanced digital books. Access to the legacy ACLS Humanities E-Book platform will continue until December 2018, where you can <a href="<%= @monograph_presenter.heb_dlxs_link %>" title="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %> on the legacy platform" target="_blank">read this book</a> and others in the collection. If you are having trouble using Fulcrum, <a href="https://goo.gl/forms/mqmDGSe5ihDgWrii1">please let us know</a>.</div>
-          <div class="dismiss">
-            <button type="button" class="dismiss" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          </div>
+  <% if press_subdomain == 'heb' && @monograph_presenter.heb_id? && !round15.include?(@monograph_presenter.heb_id)  %>
+    <div class="message" role="alert">
+      <div class="wrapper">
+        <div class="text">ACLS Humanities E-Book has migrated to <a href="https://fulcrum.org" target="_blank">Fulcrum</a>, a new platform for enhanced digital books. Access to the legacy ACLS Humanities E-Book platform will continue until December 2018, where you can <a href="<%= @monograph_presenter.heb_dlxs_link %>" title="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %> on the legacy platform" target="_blank">read this book</a> and others in the collection. If you are having trouble using Fulcrum, <a href="https://goo.gl/forms/mqmDGSe5ihDgWrii1">please let us know</a>.</div>
+        <div class="dismiss">
+          <button type="button" class="dismiss" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
       </div>
-    <% end %>
+    </div>
   <% elsif show_ebc_banner? %>
     <%= render 'shared/ebc_banner' %>
   <% end %>
-
   <!-- breadcrumbs -->
   <%= render 'shared/breadcrumbs' %>
 <% end %><!-- provide :page_header -->
