Addresses HELIO-1427 EPUB event tracking.

--- a/app/views/hyrax/file_sets/_media_embedded.html.erb
+++ b/app/views/hyrax/file_sets/_media_embedded.html.erb
@@ -10,3 +10,4 @@
   </div>
   <%= render partial: @presenter.heliotrope_media_partial('media_display_embedded'), locals: { file_set: @presenter } %>
 </figure>
+<%= render 'shared/ga' %>
