--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -29,5 +29,30 @@
         layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true });
         layer.addTo(map);
         L.control.pan({ panOffset: 150 }).addTo(map);
+        setupLeafletAnalytics();
     };
+
+    function setupLeafletAnalytics() {
+      if (typeof(ga) == typeof(Function)) {
+        $('a.leaflet-control-pan-left').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'leaflet_pan_left', window.location.href);
+        });
+        $('a.leaflet-control-pan-right').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'leaflet_pan_right', window.location.href);
+        });
+        $('a.leaflet-control-pan-up').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'leaflet_pan_up', window.location.href);
+        });
+        $('a.leaflet-control-pan-right').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'leaflet_pan_down', window.location.href);
+        });
+        $('a.leaflet-control-zoom-in').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'leaflet_zoom_in', window.location.href);
+        });
+        $('a.leaflet-control-zoom-out').click(function() {
+          ga('pressTracker.send', 'event', 'e_reader', 'leaflet_zoom_out', window.location.href);
+        });
+      }
+    }
+
 </script>
