--- a/app/views/shared/_ga.html.erb
+++ b/app/views/shared/_ga.html.erb
@@ -1,20 +1,33 @@
 
 <% ga_id = google_analytics(press_subdomain) %>
 
+<% ga_url = 'https://www.google-analytics.com/analytics.js' %>
+<% if Rails.env.development? %>
+  <script type="text/javascript">
+    console.log("Google Analytics debugging can be enabled in app/views/shared/_ga.html.erb.");
+  </script>
+  <% # Turn on GA debugging here %>
+  <% ga_do_debug = false %>
+  <% if ga_do_debug %>
+    <% ga_url = 'https://www.google-analytics.com/analytics_debug.js' %>
+  <% end %>
+<% end %>
+
 <% if Rails.application.secrets.has_key? :google_analytics_id %>
   <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','<%= ga_url %>','ga');
 
     ga('create', '<%= Rails.application.secrets.google_analytics_id %>', 'auto');
     ga('send', 'pageview');
-
     <% unless ga_id.nil? %>
       ga('create', '<%= ga_id %>', 'auto', 'pressTracker')
       ga('pressTracker.send', 'pageview')
     <% end %>
-
+    <% if Rails.env.development? %>
+      window.ga_debug = {trace: true};
+    <% end %>
   </script>
 <% end %>
