--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,9 +4,11 @@
   <b>
     <div class="col-md-10">
       <div class="col-md-1">ID</div>
-      <div class="col-md-3">Identifier</div>
-      <div class="col-md-6">Name</div>
+      <div class="col-md-2">Identifier</div>
+      <div class="col-md-3">Name</div>
       <div class="col-md-2">Components</div>
+      <div class="col-md-2">Subscribers</div>
+      <div class="col-md-2">Lessees</div>
     </div>
     <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
     <div class="col-md-12"><hr/></div>
@@ -14,9 +16,11 @@
   <% @products.each do |product| %>
     <div class="col-md-10">
       <div class="col-md-1"><%= product.id %></div>
-      <div class="col-md-3"><%= product.identifier %></div>
-      <div class="col-md-6"><%= product.name %></div>
-      <div class="col-md-2"><%= product.components.count() %></div>
+      <div class="col-md-2"><%= product.identifier %></div>
+      <div class="col-md-3"><%= product.name %></div>
+      <div class="col-md-2"><%= product.components.count %></div>
+      <div class="col-md-2"><%= Greensub.product_subscribers(product).count %></div>
+      <div class="col-md-2"><%= product.lessees.count %></div>
     </div>
     <div class="col-md-2">
       <div class="col-md-4"><%= link_to 'Show', product %></div>
