--- a/app/views/components/_products.html.erb
+++ b/app/views/components/_products.html.erb
@@ -7,7 +7,7 @@
     <div class="col-md-2">Components</div>
   </div>
   <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
-  <div class="col-md-12"><hr/></div>
+  <hr/>
 </b>
 <% products.each do |product| %>
   <div class="col-md-10">
@@ -15,7 +15,7 @@
     <div class="col-md-3"><%= product.identifier %></div>
     <div class="col-md-3"><%= product.name %></div>
     <div class="col-md-3"><%= link_to product.purchase, product.purchase %></div>
-    <div class="col-md-2"><%= product.components.count() %></div>
+    <div class="col-md-2"><%= product.components.count %></div>
   </div>
   <div class="col-md-2">
     <%= link_to(component_product_path(component, product), method: :delete, class: "btn btn-default") do %>
