--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -29,7 +29,7 @@
       <div class="col-md-3"><%= link_to component.handle, HandleService.url(component.noid) %></div>
       <div class="col-md-1">&nbsp<%= link_to_if file_set.present?, file_set_id, hyrax_file_set_path(file_set_id) %></div>
       <div class="col-md-2">&nbsp<%= link_to_if monograph.present?, monograph_id, hyrax_monograph_path(monograph_id) %></div>
-      <div class="col-md-2"><%= component.products.count() %></div>
+      <div class="col-md-2"><%= component.products.count %></div>
     </div>
     <div class="col-md-2">
       <div class="col-md-4"><%= link_to 'Show', component %></div>
