--- a/app/views/individuals/show.html.erb
+++ b/app/views/individuals/show.html.erb
@@ -1,21 +1,21 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
   <h1>Individual</h1>
+  <div class="col-md-1"><em>ID</em></div>
+  <div class="col-md-11"><%= @individual.id %></div>
   <div class="col-md-1"><em>Identifier</em></div>
   <div class="col-md-11">&nbsp<%= @individual.identifier %></div>
   <div class="col-md-1"><em>Name</em></div>
   <div class="col-md-11">&nbsp<%= @individual.name %></div>
   <div class="col-md-1"><em>eMail</em></div>
   <div class="col-md-11">&nbsp<%= @individual.email %></div>
+  <div class="col-md-1"><em>Lessee</em></div>
+  <div class="col-md-11"><%= link_to @individual.lessee.id, lessee_path(@individual.lessee) %></div>
   <div class="col-md-12"><br/></div>
-  <h2>Grants</h2>
+  <h2>Products</h2>
   <div class="col-md-12">
-    <%= render partial: '/grants/grants', locals: { agent: @individual, grants: @individual.grants } %>
+    <%= render partial: '/individuals/products', locals: { individual: @individual, products: Greensub.subscriber_products(@individual) } %>
   </div>
-  <div class="col-md-12"><br/></div>
-  <h2>Lessee</h2>
-  <div class="col-md-1"><%= link_to @individual.lessee.id, lessee_path(@individual.lessee) %></div>
-  <div class="col-md-11"><%= @individual.lessee.identifier %></div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
     <%= link_to_if @individual.update?, 'Edit', edit_individual_path(@individual) %>
