--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
   <h1>Institution</h1>
+  <div class="col-md-1"><em>ID</em></div>
+  <div class="col-md-11"><%= @institution.id %></div>
   <div class="col-md-1"><em>Identifier</em></div>
   <div class="col-md-11">&nbsp<%= @institution.identifier %></div>
   <div class="col-md-1"><em>Name</em></div>
@@ -11,15 +13,13 @@
   <div class="col-md-11">&nbsp<%= @institution.site %></div>
   <div class="col-md-1"><em>Login</em></div>
   <div class="col-md-11">&nbsp<%= @institution.login %></div>
+  <div class="col-md-1"><em>Lessee</em></div>
+  <div class="col-md-11"><%= link_to @institution.lessee.id, lessee_path(@institution.lessee) %></div>
   <div class="col-md-12"><br/></div>
-  <h2>Grants</h2>
+  <h2>Products</h2>
   <div class="col-md-12">
-    <%= render partial: '/grants/grants', locals: { agent: @institution, grants: @institution.grants } %>
+    <%= render partial: '/institutions/products', locals: { institution: @institution, products: Greensub.subscriber_products(@institution) } %>
   </div>
-  <div class="col-md-12"><br/></div>
-  <h2>Lessee</h2>
-  <div class="col-md-1"><%= link_to @institution.lessee.id, lessee_path(@institution.lessee) %></div>
-  <div class="col-md-11"><%= @institution.lessee.identifier %></div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
     <%= link_to_if @institution.update?, 'Edit', edit_institution_path(@institution) %>
