--- a/app/views/lessees/show.html.erb
+++ b/app/views/lessees/show.html.erb
@@ -1,6 +1,8 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
   <h1>Lessee</h1>
+  <div class="col-md-1"><em>ID</em></div>
+  <div class="col-md-11"><%= @lessee.id %></div>
   <div class="col-md-1"><em>Identifier</em></div>
   <div class="col-md-11"><%= @lessee.identifier %></div>
   <div class="col-md-12"><br/></div>
@@ -14,16 +16,6 @@
     <div class="col-md-1"><%= link_to @lessee.institution.id, institution_path(@lessee.institution) %></div>
     <div class="col-md-11"><%= @lessee.institution.name %></div>
   <% end %>
-  <div class="col-md-12"><br/></div>
-  <h2>Products</h2>
-  <div class="col-md-12">
-    <%= render partial: 'products', locals: { lessee: @lessee, products: @lessee.products } %>
-  </div>
-  <div class="col-md-12"><br/></div>
-  <h2>Components</h2>
-  <div class="col-md-12">
-    <%= render partial: 'components', locals: { lessee: @lessee, components: @lessee.components } %>
-  </div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
     <span>Edit | </span>
