--- a/app/views/products/_components.html.erb
+++ b/app/views/products/_components.html.erb
@@ -9,7 +9,7 @@
     <div class="col-md-2">Products</div>
   </div>
   <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
-  <div class="col-md-12"><hr/></div>
+  <hr/>
 </b>
 <% components.each do |component| %>
   <%
@@ -26,7 +26,7 @@
     <div class="col-md-3"><%= link_to component.handle, HandleService.url(component.noid) %></div>
     <div class="col-md-1">&nbsp<%= link_to_if file_set.present?,file_set_id, hyrax_file_set_path(file_set_id) %></div>
     <div class="col-md-2">&nbsp<%= link_to_if monograph.present?, monograph_id, hyrax_monograph_path(monograph_id) %></div>
-    <div class="col-md-2"><%= component.products.count() %></div>
+    <div class="col-md-2"><%= component.products.count %></div>
   </div>
   <div class="col-md-2">
     <%= link_to(product_component_path(product, component), method: :delete, class: "btn btn-default") do %>
