--- a/app/views/products/_lessees.html.erb
+++ b/app/views/products/_lessees.html.erb
@@ -15,6 +15,6 @@
     <div class="col-md-3"><%= lessee.identifier %></div>
     <div class="col-md-3">&nbsp<%= link_to_if lessee.individual?, lessee.individual&.name, lessee.individual %></div>
     <div class="col-md-3">&nbsp<%= link_to_if lessee.institution?, lessee.institution&.name, lessee.institution %></div>
-    <div class="col-md-2"><%= lessee.products.count() %></div>
+    <div class="col-md-2"><%= lessee.products.count %></div>
   </div>
 <% end %>
