Resolves HELIO-2308 open access icon.

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -392,6 +392,16 @@ footer.press {
       }
     }
 
+    .open-access {
+      display: flex;
+      align-items:center;
+      margin-top: 1em;
+      font-weight: bold;
+      font-stretch: condensed;
+      img {
+        margin-right: .5em;
+      }
+    }
   }
 
   // EPUB - MONOGRAPH INFORMATION
