--- a/app/views/fulcrum/_component.html.erb
+++ b/app/views/fulcrum/_component.html.erb
@@ -1,4 +1,4 @@
-<% component = Component.find_by(handle: HandleService.path(@identifier)) %>
+<% component = Component.find_by(noid: @identifier) %>
 <h1>Component</h1>
 <div class="col-md-12">
   <table class="table table-striped" summary="Component Detail">
