--- a/app/views/fulcrum/_dashboard.html.erb
+++ b/app/views/fulcrum/_dashboard.html.erb
@@ -18,5 +18,16 @@
     <li><%= key.to_s %>: <%= value.to_s %></li>
   <% end %>
 </ul>
+<h2>Incognito</h2>
+<form name="incognito" method="get" action="<%= fulcrum_partials_path(:dashboard) %>">
+  <input type="checkbox" id="platform_admin" name="platform_admin" value="mask" <%= !Incognito.allow_platform_admin?(current_actor) ? 'checked' : '' %>>
+  <b>Incognito</b>.allow_platform_admin? -> <b>false</b><br>
+  <input type="checkbox" id="hyrax_can" name="hyrax_can" value="mask" <%= !Incognito.allow_hyrax_can?(current_actor) ? 'checked' : '' %>>
+  <b>Incognito</b>.allow_hyrax_can? -> <b>false</b><br>
+  <input type="checkbox" id="action_permitted" name="action_permitted" value="mask" <%= !Incognito.allow_action_permitted?(current_actor) ? 'checked' : '' %>>
+  <b>Incognito</b>.allow_action_permitted? -> <b>false</b><br>
+  &nbsp;<br>
+  <button name="submit" type="submit" value="incognito">Incognito</button>
+</form>
 <h2>Token</h2>
 <%= text_field(:user, :token, size: 120, value: current_user.token, disabled: true) %>
