--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,3 +11,4 @@
 <% if defined?(@press.subdomain) %>
   <%= render 'shared/brand_press_jumbotron' %>
 <% end %>
+<%= render 'shared/brand_press_banner' if show_banner?(current_actor, press_subdomain) %>
