HELIO-2384 Log view for share links

--- a/app/views/fulcrum/_logs.html.erb
+++ b/app/views/fulcrum/_logs.html.erb
@@ -9,4 +9,9 @@
       <% end %>
     </td>
   </tr>
+  <tr>
+    <td><%= link_to "Share Link Log", share_link_logs_path %></td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
 </table>
