HELIO-2399 counter report form typo

--- a/app/views/counter_reports/without_customer_id/master_view/_form.html.erb
+++ b/app/views/counter_reports/without_customer_id/master_view/_form.html.erb
@@ -20,7 +20,7 @@
     <div class="col-sm-2">
       <select name="metric_type" aria-label="Metric Type" class="form-control">
         <option value="Total_Item_Investigations">Total Item Investigations</option>
-        <option value="Unique_Item_Investigations">Unique Item Investiations</option>
+        <option value="Unique_Item_Investigations">Unique Item Investigations</option>
         <% unless report_id == 'ir' %>
         <option value="Unique_Title_Investigations">Unique Title Investigations</option>
         <% end %>
